<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="make.appaplication.Fragment4"
    >



    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/nature"
        android:id="@+id/imageView"
        android:layout_weight="1"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView3"
        android:textSize="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_page_1"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:text="@string/question_1"
        android:textSize="17dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView" />

    <RadioGroup
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_below="@+id/textView4"
        android:id="@+id/radioGroup1" >
    <RadioButton
        android:text="@string/answer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/radioButton1" />

    <RadioButton
        android:text="@string/answer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioButton2" />

    <RadioButton
        android:text="@string/answer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton2"
        android:layout_alignRight="@+id/radioButton2"
        android:layout_alignEnd="@+id/radioButton2"
        android:id="@+id/radioButton3" />

    </RadioGroup>

    <TextView
        android:text="Nature"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp"
        android:layout_marginStart="24dp" />


</RelativeLayout>


